# indoor-infrared-mocap

./: .gitignore  README.md  main.py  poetry.toml  pyproject.toml  run_tracking.py  sandbox.ipynb  sandbox.py  sandbox_gui.ipynb  setup.py
config/: camera-extrinsic.json  camera-params.json  objects.json
irtracking/: capture.py  collector.py  lifo_mp_queue.py  main.py  objects.py  params.py  sfm.py  system.py  world.py
irtracking/camera/: capture.py  params.py  system.py
irtracking/reconstruction/: world.py
opencv_build/: build.bat  configure.bat  configure.ps1  install.ps1  opencv_build.env
opencv_build/scripts/: get_python_dirs.py  opencv_test.py
tests/: calibration.ipynb  camera-extrinsic.json  camera_display.py  camera_save_video.py  camera_save_video_new.py  opencv_checker.py  optimized_extrinsics.json  test_camera.py  test_camera_params.py  test_homography.py  test_reconstruction.py  test_triangulation.py
tests/config/: camera-intrinsic-example.json
